Added color to contact me

--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -20,9 +20,9 @@
     <main>
         <h1>Where you can find me</h1>
         <ul>
-            <li><a href="https://twitter.com/strikerrocker">Twitter</a></li>
-            <li><a href="https://discord.gg/tqcqeSj">My Discord</a></li>
-            <li><a href="https://minecraft.curseforge.com/members/strikerrocker">CurseForge</a></li>
+            <li><a href="https://twitter.com/strikerrocker" , style="color: lightseagreen">Twitter</a></li>
+            <li><a href="https://discord.gg/tqcqeSj" , style="color: lightseagreen">My Discord</a></li>
+            <li><a href="https://minecraft.curseforge.com/members/strikerrocker" , style="color: lightseagreen">CurseForge</a></li>
         </ul>
     </main>
 </body>
