Fix and remove alignments in html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <main>
-        <h1 align="center">Welcome Random person on the internet!</h1>
-        <p align="center">I'm a random person on internet who lurks on discords and makes mods for a kids game called minecraft.</p>
-        <p align="center">Use the above links to navigate this site.</p>
+        <h1 class="align-centre">Welcome Random person on the internet!</h1>
+        <p>I'm a random person on internet who lurks on discords and makes mods for a kids game called minecraft.</p>
+        <p>Use the above links to navigate this site.</p>
     </main>
 </body>
 
