--- a/pages/mods.html
+++ b/pages/mods.html
@@ -43,7 +43,7 @@
                     <li><a href="https://minecraft.curseforge.com/projects/clear-despawn-fabric" , style="color: lightseagreen">ClearDespawn</a>
                         <p>Makes dropped items flash when they're about to despawn. </p>
                     </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" , style="color: lightseagreen">Furncae XP Drop</a>
+                    <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" , style="color: lightseagreen">Furnace XP Drop</a>
                         <p>Drops stored xp in a furnace when broken</p>
                     </li>
                     <li><a href="https://minecraft.curseforge.com/projects/craftingpad-fabric" , style="color: lightseagreen">Crafting Pad</a>
