--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -2,9 +2,14 @@
 <html>
 
 <head <meta charset="utf-8">
-    <title>Home</title>
+    <title>Contacts</title>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <meta name="author" content="StrikerRocker">
+    <meta property="og:title" content="Contacts">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="A website about me.">
+    <meta property="og:site_name" content="StrikerRocker's Site">
 </head>
 <article>
     <header>
@@ -23,6 +28,7 @@
             <li><a href="https://twitter.com/strikerrocker" , style="color: lightseagreen">Twitter</a></li>
             <li><a href="https://discord.gg/tqcqeSj" , style="color: lightseagreen">My Discord</a></li>
             <li><a href="https://minecraft.curseforge.com/members/strikerrocker" , style="color: lightseagreen">CurseForge</a></li>
+            <li><a href="https://www.github.com/strikerrocker" , style="color: lightseagreen">Github</a></li>
         </ul>
     </main>
 </body>
