--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Home</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <meta name="author" content="StrikerRocker">
+    <meta property="og:title" content="Home">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="A website about me.">
+    <meta property="og:site_name" content="StrikerRocker's Site">
 </head>
 <article>
     <header>
