--- a/pages/mods.html
+++ b/pages/mods.html
@@ -2,9 +2,14 @@
 <html>
 
 <head <meta charset="utf-8">
-    <title>Home</title>
+    <title>My Mods</title>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <meta name="author" content="StrikerRocker">
+    <meta property="og:title" content="My Mods">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="A website about me.">
+    <meta property="og:site_name" content="StrikerRocker's Site">
 </head>
 <article>
     <header>
