More tweaks and stuff

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
 <body>
     <main>
         <h1 class="align-centre">Welcome Random person on the internet!</h1>
-        <p>I'm a random person on internet who lurks on discords and makes mods for a kids game called minecraft.</p>
+        <p>I'm a adolescent on internet who lurks on discords and makes
+            <a href="pages/mods.html">
+                mods
+            </a> for a game called <a href="http://minecraft.net/">
+                minecraft
+            </a>. I have made about 5-6 mods on my own and ported mods for other modder's. </p>
         <p>Use the above links to navigate this site.</p>
+
     </main>
 </body>
 
