--- a/pages/mods.html
+++ b/pages/mods.html
@@ -31,13 +31,15 @@
                 <ul>
                     <li>
                         <a href="https://minecraft.curseforge.com/projects/vanillatweaks" , style="color: lightseagreen">VanillaTweaks</a>
-
+                        <img alt="VanillaTweaks Downloads" src="http://cf.way2muchnoise.eu/vanillatweaks.svg">
                     </li>
                     <p>A mod which aims to improves the vanilla playthrough without being evasive</p>
                     <li><a href="https://minecraft.curseforge.com/projects/tweakoni" , style="color: lightseagreen">Tweakoni</a>
+                        <img alt="Tweakoni Downloads" src="http://cf.way2muchnoise.eu/tweakoni.svg">
                         <p>A mod which adds random tweaks to Vanilla suggested by MumboJumbo</p>
                     </li>
                     <li><a href="https://minecraft.curseforge.com/projects/sbm-jukebox" , style="color: lightseagreen">SBM Jukebox</a>
+                        <img alt="sbm-jukebox Downloads" src="http://cf.way2muchnoise.eu/sbm-jukebox.svg">
                         <p>Adds inventory support for jukebox</p>
                     </li>
                 </ul>
@@ -46,15 +48,23 @@
                 <h2 style="color:lemonchiffon">Mods made for fabric</h2>
                 <ul>
                     <li><a href="https://minecraft.curseforge.com/projects/clear-despawn-fabric" , style="color: lightseagreen">ClearDespawn</a>
+                        <img alt="ClearDespawn Downloads" src="http://cf.way2muchnoise.eu/clear-despawn-fabric.svg">
                         <p>Makes dropped items flash when they're about to despawn. </p>
                     </li>
                     <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" , style="color: lightseagreen">Furnace XP Drop</a>
+                        <img alt="furnace-xp-drop Downloads" src="http://cf.way2muchnoise.eu/furnace-xp-drop-fabric.svg">
                         <p>Drops stored xp in a furnace when broken</p>
                     </li>
                     <li><a href="https://minecraft.curseforge.com/projects/craftingpad-fabric" , style="color: lightseagreen">Crafting Pad</a>
+                        <img alt="CraftingPad Downloads" src="http://cf.way2muchnoise.eu/craftingpad-fabric.svg">
                         <p>Add an item which opens crafting menu</p>
                     </li>
                 </ul>
+            </li>
+            <li>
+                <h2 style="color:lemonchiffon">Mods ported for others </h2>
+                <ul></ul>
+                <p>Will update soon!</p>
             </li>
         </ul>
     </main>
