--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -25,10 +25,23 @@
     <main>
         <h1>Where you can find me</h1>
         <ul>
-            <li><a href="https://twitter.com/strikerrocker" , style="color: lightseagreen">Twitter</a></li>
-            <li><a href="https://discord.gg/tqcqeSj" , style="color: lightseagreen">My Discord</a></li>
-            <li><a href="https://minecraft.curseforge.com/members/strikerrocker" , style="color: lightseagreen">CurseForge</a></li>
-            <li><a href="https://www.github.com/strikerrocker" , style="color: lightseagreen">Github</a></li>
+            <li>
+                <img class="size16" alt="Twitter logo" src="../assets/Twitter_Logo_WhiteOnBlue.png">
+                <a href="https://www.twitter.com/strikerrocker" , style="color: lightseagreen">My Twitter</a>
+            </li>
+            <li>
+                <img class="size16" alt="Github mark" src="../assets/Discord-Logo-Color.png">
+                <a href="https://discord.gg/tqcqeSj" , style="color: lightseagreen">My Discord</a>
+            </li>
+            <li>
+                <img class="size16" alt="CurseForge logo" src="../assets/curse-vertical_lightbg.png">
+                <a href="https://minecraft.curseforge.com/members/strikerrocker" , style="color: lightseagreen">CurseForge</a>
+            </li>
+            <li>
+                <img class="size16" alt="Github mark" src="../assets/GitHub-Mark-32px.png">
+                <a href="https://www.github.com/strikerrocker" , style="color: lightseagreen">Github</a>
+
+            </li>
         </ul>
     </main>
 </body>
