--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Home</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
