--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -5,6 +5,7 @@
     <title>Contacts</title>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="Contacts">
     <meta property="og:type" content="website">
