Add g-analytics to the site

--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <title>Home</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Minecraft,Mods,VanillaTweaks,strikerrocker,Forge,Fabric, Mod Packs">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
     <meta property="og:url" content="A website about me.">
     <meta property="og:site_name" content="StrikerRocker's Site">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109233842-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-109233842-2');
+    </script>
 </head>
 <article>
     <header>
@@ -25,14 +39,25 @@
 <body>
     <main>
         <h1 class="align-centre">Welcome Random person on the internet!</h1>
-        <p>I'm a adolescent on internet who lurks on discords and makes
-            <a href="pages/mods.html">
-                mods
-            </a> for a game called <a href="http://minecraft.net/">
-                minecraft
-            </a>. I have made about 5-6 mods on my own and ported mods for other modder's. </p>
-        <p>Use the above links to navigate this site.</p>
-
+        <ul>
+            <li>I'm a adolescent on internet who lurks on discords and makes mods for a game called <a href="http://minecraft.net/">
+                minecraft</a>.
+            </li>
+            <li>
+                I have made about 5-6 mods on my own and ported mods for other modder's.
+            </li>
+            <li>
+                The mod i am most proud of is <a href="https://minecraft.curseforge.com/projects/VanillaTweaks">VanillaTweaks</a> was initially a unofficial port of a mod called
+                <a href="https://minecraft.curseforge.com/projects/craft-by-anon10w1z">Craft++</a> and I started adding more into it.
+            </li>
+            <li>
+                I am learning/trying to make a 2D game for starters in java. Checkout how its coming along
+                <a href="http://github.com/strikerrocker/2D-game">here</a>
+            </li>
+            <li>
+                I have made some more mods check them <a href="pages/mods.html">here </a>
+            </li>
+        </ul>
     </main>
 </body>
 
