--- a/pages/mods.html
+++ b/pages/mods.html
@@ -5,12 +5,26 @@
     <title>My Mods</title>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Minecraft,Mods,VanillaTweaks,strikerrocker,Forge,Fabric, Mod Packs">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="My Mods">
     <meta property="og:type" content="website">
     <meta property="og:url" content="A website about me.">
     <meta property="og:site_name" content="StrikerRocker's Site">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109233842-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-109233842-2');
+    </script>
 </head>
 <article>
     <header>
