More mature index page stolen from DarkCow

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <main>
         <h1 class="align-centre">Welcome Random person on the internet!</h1>
         <ul>
-            <li>I'm a adolescent on internet who lurks on discords and makes mods for a game called <a href="http://minecraft.net/">
-                minecraft</a>.
-            </li>
+            <li>I'm a young developer currently learning software development through indie game and addon development. Primarily focused on making mods for the game <a href="http://minecraft.net/">
+                Minecraft</a>. Some of which can be seen <a href="pages/mods.html">here </a></li>
             <li>
                 I have made about 5-6 mods on my own and ported mods for other modder's.
             </li>
@@ -53,9 +52,6 @@
             <li>
                 I am learning/trying to make a 2D game for starters in java. Checkout how its coming along
                 <a href="http://github.com/strikerrocker/2D-game">here</a>
-            </li>
-            <li>
-                I have made some more mods check them <a href="pages/mods.html">here </a>
             </li>
         </ul>
     </main>
