--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<head <meta charset="utf-8">
+<head>
     <title>Home</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
+    <link href="styles/default.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,6 +32,7 @@
         <ul class="header">
             <li class="header"><a class="active">Home</a></li>
             <li class="header"><a href="pages/mods.html">My Mods</a></li>
+            <li class="header"><a href="pages/vanillatweaks/home.html">VanillaTweaks</a></li>
             <li class="header"><a href="pages/contactme.html">Contact</a></li>
         </ul>
     </header>
