Add entries for all features. Pictures later

--- a/pages/vanillatweaks/crafting.html
+++ b/pages/vanillatweaks/crafting.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>VanillaTweaks</title>
+    <title>VanillaTweaks Crafting</title>
     <meta charset="utf-8">
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="StrikerRocker">
-    <meta property="og:title" content="VanillaTweaks">
+    <meta property="og:title" content="VanillaTweaks Crafting">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:site_name" content="">
@@ -42,14 +42,15 @@
         </div>
     </div>
     <nav class="nav nav-pills nav-fill justify-content-center">
-        <a class="nav-link home" href="">Home</a>
-        <a class="nav-link crafting active" href="">Crafting</a>
-        <a class="nav-link enchanting" href="">Enchanting</a>
-        <a class="nav-link loot" href="">Loot</a>
-        <a class="nav-link world" href="">World</a>
-        <a class="nav-link tweaks" href="">Tweaks</a>
-        <a class="nav-link upcoming" href="">Upcoming</a>
+        <a class="nav-link home" href="home.html">Home</a>
+        <a class="nav-link crafting active" href="crafting.html">Crafting</a>
+        <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
+        <a class="nav-link loot" href="loot.html">Loot</a>
+        <a class="nav-link world" href="world.html">World</a>
+        <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
+        <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
     </nav>
+    <!--Features-->
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -58,7 +59,7 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="">
+                                <img src="" alt="Picture representing dynamite">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
@@ -75,23 +76,273 @@
 
                                 <!-- more link -->
 
-                                <a data-toggle="collapse" href="#more_" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+                                <a data-toggle="collapse" href="#more_dynamite" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
 
-                                <div class="collapse" id="more_">
-                                    <br>
-
+                                <div class="collapse" id="more_dynamite">
+                                    Adds a new item which can be right clicked to spawn a dynamite which explodes on contact with anything.
                                 </div>
-
-
-
                                 <!-- versions -->
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="card bg-light">
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            <div class="image-region col-md-3">
+                                <!-- image -->
+                                <img src="" alt="Picture representing fried egg">
+                            </div>
+
+                            <div class="text-region col-md-9 p-4">
+                                <!-- title -->
+                                <a name="fried_egg">
+                                    <h4>Fried Egg</h4>
+                                </a>
+
+                                <div class="description">
+                                    <p>
+                                        Simply toss an egg in the furnace to produce it! It will heal 2.5 hunger bars.
+                                    </p>
+                                </div>
+
+                                <!-- more link -->
+
+                                <a data-toggle="collapse" href="#more_fried_egg" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+
+                                <div class="collapse" id="more_fried_egg">
+                                    Adds a new food item which can be obtained by smelting and this heals 2.5 hunger bars.
+                                </div>
+                                <!-- versions -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-light">
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            <div class="image-region col-md-3">
+                                <!-- image -->
+                                <img src="" alt="Picture representing Binoculars">
+                            </div>
+
+                            <div class="text-region col-md-9 p-4">
+                                <!-- title -->
+                                <a name="binoculars">
+                                    <h4>Binoculars</h4>
+                                </a>
+
+                                <div class="description">
+                                    <p>
+                                        A non-OP way to zoom! The amount of zoom is configurable.
+                                    </p>
+                                </div>
+
+                                <!-- more link -->
+
+                                <a data-toggle="collapse" href="#binoculars" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+
+                                <div class="collapse" id="binoculars">
+                                    Adds a new item which can be equipped in helmet slot and when equipped let's you zoom.
+                                </div>
+                                <!-- versions -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-light">
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            <div class="image-region col-md-3">
+                                <!-- image -->
+                                <img src="" alt="Picture representing Slime Finder">
+                            </div>
+
+                            <div class="text-region col-md-9 p-4">
+                                <!-- title -->
+                                <a name="slime_finder">
+                                    <h4>Slime Finder</h4>
+                                </a>
+
+                                <div class="description">
+                                    <p>
+                                        A way in-game to identify slime chunks by right clicking.
+                                    </p>
+                                </div>
+
+                                <!-- more link -->
+
+                                <a data-toggle="collapse" href="#slime_finder" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+
+                                <div class="collapse" id="slime_finder">
+                                    When right clicked indicates whether the current chunk player is in is a slime chunk.
+                                </div>
+                                <!-- versions -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing Storage blocks">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="storage_blocks">
+                                        <h4>Storage blocks</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            Storage blocks for flint, sugar, and charcoal. Charcoal blocks can be used like coal blocks.
+                                        </p>
+                                    </div>
+
+                                    <!-- more link -->
+
+                                    <a data-toggle="collapse" href="#storage_blocks" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+
+                                    <div class="collapse" id="storage_blocks">
+                                        Can be crafted by filling the crafting table with the item.
+                                    </div>
+                                    <!-- versions -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing bark blocks">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="bark_blocks">
+                                        <h4>Bark blocks</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            A block which has bark textures of logs in all sides.
+                                        </p>
+                                    </div>
+                                    <!-- versions -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing Pedestal">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="pedestal">
+                                        <h4>Pedestal</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            A new way to show your treasures to other!
+                                        </p>
+                                    </div>
+
+                                    <!-- more link -->
+
+                                    <a data-toggle="collapse" href="#pedestal" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
+
+                                    <div class="collapse" id="pedestal">
+                                        Right click with a item to add & remove it to the pedestal.
+                                        <br> Shift right click the pedestal to open its GUI.
+                                    </div>
+                                    <!-- versions -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing better stairs recipes">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="better_stairs_recipes">
+                                        <h4>Better stairs recipes</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            Changes the recipe's for all stair to be more <strong>consistent</strong>.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing better stone tool recipes">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="better_stone_tools_recipes">
+                                        <h4>Better stone tools recipes</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            Changes the recipe's for all stone tools to use stone instead of cobblestone.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-light">
+                        <div class="card-body p-0">
+                            <div class="row no-gutters">
+                                <div class="image-region col-md-3">
+                                    <!-- image -->
+                                    <img src="" alt="Picture representing better chest recipes">
+                                </div>
+
+                                <div class="text-region col-md-9 p-4">
+                                    <!-- title -->
+                                    <a name="better_chests_recipes">
+                                        <h4>Better chests recipes</h4>
+                                    </a>
+
+                                    <div class="description">
+                                        <p>
+                                            Adds a <strong>new</strong> recipe which allows chest to be crafted in bulk using logs.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
-    </div>
 
 </body>
 
