--- a/pages/vanillatweaks/home.html
+++ b/pages/vanillatweaks/home.html
@@ -42,13 +42,13 @@
         </div>
     </div>
     <nav class="nav nav-pills nav-fill justify-content-center">
-        <a class="nav-link home active" href="">Home</a>
+        <a class="nav-link home active" href="home.html">Home</a>
         <a class="nav-link crafting" href="crafting.html">Crafting</a>
-        <a class="nav-link enchanting" href="">Enchanting</a>
-        <a class="nav-link loot" href="">Loot</a>
-        <a class="nav-link world" href="">World</a>
-        <a class="nav-link tweaks" href="">Tweaks</a>
-        <a class="nav-link upcoming" href="">Upcoming</a>
+        <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
+        <a class="nav-link loot" href="loot.html">Loot</a>
+        <a class="nav-link world" href="world.html">World</a>
+        <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
+        <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
     </nav>
     <br>
     <br>
