--- a/pages/vanillatweaks/upcoming.html
+++ b/pages/vanillatweaks/upcoming.html
@@ -5,7 +5,7 @@
     <title>VanillaTweaks Upcoming</title>
     <meta charset="utf-8">
     <!--Meta properties-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="VanillaTweaks Upcoming">
     <meta property="og:type" content="website">
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 mt-4 mb-4 text-center">
-                <h1 class="display-1">VanillaTweaks</h1>
+                <h1 class="display-1" id="title">VanillaTweaks</h1>
             </div>
         </div>
     </div>
