work on json->cards.

--- a/pages/mods.html
+++ b/pages/mods.html
@@ -32,7 +32,7 @@
         <ul class="header">
             <li class="header"><a href="../index.html">Home</a></li>
             <li class="header"><a class="active">My Mods</a></li>
-            <li class="header"><a href="vanillatweaks/home.html">VanillaTweaks</a></li>
+            <li class="header"><a href="../vanillatweaks/home.html">VanillaTweaks</a></li>
             <li class="header"><a href="contactme.html">Contact</a></li>
         </ul>
     </header>
