--- a/vanillatweaks/world.html
+++ b/vanillatweaks/world.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>VanillaTweaks Enchanting</title>
+    <title>VanillaTweaks World</title>
     <meta charset="utf-8">
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="author" content="StrikerRocker">
-    <meta property="og:title" content="VanillaTweaks Enchanting">
+    <meta property="og:title" content="VanillaTweaks World">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:site_name" content="">
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <link href="../../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
+    <link href="../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -44,9 +44,9 @@
     <nav class="nav nav-pills nav-fill justify-content-center">
         <a class="nav-link home" href="home.html">Home</a>
         <a class="nav-link crafting" href="crafting.html">Crafting</a>
-        <a class="nav-link enchanting active" href="enchanting.html">Enchanting</a>
+        <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
         <a class="nav-link loot" href="loot.html">Loot</a>
-        <a class="nav-link world" href="world.html">World</a>
+        <a class="nav-link world active" href="world.html">World</a>
         <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
         <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
     </nav>
@@ -59,18 +59,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing Nimble and hops">
+                                <img src="" alt="Picture representing less dangerous nether">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="nimble_and_hops">
-                                    <h4>Nimble and hops</h4>
+                                <a name="less_dangerous_nether">
+                                    <h4>Less dangerous nether</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        These enchantments go on your boots, and can go all the way up to level 3. Each level adds a bit to your movement speed and jump height, respectively.
+                                        Nether is Less Dangerous as there are no Lava Pockets.
                                     </p>
                                 </div>
                             </div>
@@ -82,18 +82,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing Vigor">
+                                <img src="" alt="Picture representing realistic predator/prey relationship">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="vigor">
-                                    <h4>Vigor</h4>
+                                <a name="realistic_relationship">
+                                    <h4>Realistic predator/prey relationships!</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        This enchantment goes on your chestplate. It will grant the wearer a one heart max health increase per enchantment level, maximum of 3.
+                                        When ocelots kill chickens, the chickens won't drop meat! Same for wolves and sheep!
                                     </p>
                                 </div>
                             </div>
@@ -105,18 +105,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing Veteran">
+                                <img src="" alt="Picture representing automatic seed planting">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="veteran">
-                                    <h4>Veteran</h4>
+                                <a name="auto_seed_planting">
+                                    <h4>Automatic seed plating</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        This enchantment goes on your head, instantly increasing your knowledge! It will attract all experience orbs in a 32-block radius towards you!
+                                        Seeds will plant themselves after a (randomly-determined) couple of seconds delay. Farms can now be more easily automated!
                                     </p>
                                 </div>
                             </div>
@@ -128,69 +128,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing Blazing">
+                                <img src="" alt="Picture representing sponges drying in nether">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="blazing">
-                                    <h4>Blazing</h4>
+                                <a name="sponge_nether_dry">
+                                    <h4>Sponges dry in nether</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        This enchantment goes on your pickaxe. Automatically smelts everything the block drops.
-                                        <br> If you have fortune on your item, it will increase the stack size of the drops accordingly - but not for drops that are blocks themselves.
-                                        <br>It cannot be applied with Silk Touch, obviously. Only available at level 1.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Siphon">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="siphon">
-                                    <h4>Siphon</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your pickaxe. All mined block drops instantly go into your inventory!
-                                        <br>You won't have to deal with a pesky zombie or friend stealing your freshly-mined diamonds again!
-                                        <br>It is friendly with Silk Touch or Blazing.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Homing">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="homing">
-                                    <h4>Homing</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your bow. Your arrows will aim right at your target.
-                                        <br>Level 1 works for entities 32 blocks away, level 2 works for entities 64 blocks away, and level 3 128 blocks away.
+                                        Wet sponges when placed dries and becomes a sponge block.
                                     </p>
                                 </div>
                             </div>
@@ -200,7 +149,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
