--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="header">
             <li class="header"><a class="active">Home</a></li>
             <li class="header"><a href="pages/mods.html">My Mods</a></li>
-            <li class="header"><a href="pages/vanillatweaks/home.html">VanillaTweaks</a></li>
+            <li class="header"><a href="vanillatweaks/home.html">VanillaTweaks</a></li>
             <li class="header"><a href="pages/contactme.html">Contact</a></li>
         </ul>
     </header>
