--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -32,7 +32,7 @@
         <ul class="header">
             <li class="header"><a href="../index.html">Home</a></li>
             <li class="header"><a href="mods.html">My Mods</a></li>
-            <li class="header"><a href="vanillatweaks/home.html">VanillaTweaks</a></li>
+            <li class="header"><a href="../vanillatweaks/home.html">VanillaTweaks</a></li>
             <li class="header"><a class="active">Contact</a></li>
         </ul>
     </header>
