--- a/vanillatweaks/home.html
+++ b/vanillatweaks/home.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <link href="../../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
+    <link href="../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -61,9 +61,9 @@
 
                 </p>
                 <p>
-                    Vanilla Tweaks is extremely configurable. Everything from enabling and disabling enchantments to hoe as sickle can be configured straight from the config GUI, accessible from the mods menu or the game menu. It is advised to delete your config file every
+                    VanillaTweaks is extremely configurable. Everything from enabling and disabling enchantments to hoe as sickle can be configured straight from the config GUI, accessible from the mods menu or the game menu. It is advised to delete your config file every
                     time you update Vanilla Tweaks, for the configuration options may have changed.
-                </p>
+                </p>`
                 <p>
                     I hope you enjoy playing this mod as much as I have enjoyed learning about modding and building it!
                 </p>
@@ -76,7 +76,7 @@
                 <h3>How to install</h3>
                 <ol>
                     <li>
-                        Charm requires Minecraft 1.12 with forge. Download the forge install from <a href="http://files.minecraftforge.net/">here</a> and run it.
+                        VanillaTweaks requires Minecraft 1.12 with forge. Download the forge install from <a href="http://files.minecraftforge.net/">here</a> and run it.
                     </li>
                     <li>
                         Download the latest version of VanillaTweaks from curseforge.com and put the .jar file in your mods folder. This normally lives in the same folder as your resourcepacks folder.
