--- a/vanillatweaks/loot.html
+++ b/vanillatweaks/loot.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>VanillaTweaks World</title>
+    <title>VanillaTweaks Tweaks</title>
     <meta charset="utf-8">
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="author" content="StrikerRocker">
-    <meta property="og:title" content="VanillaTweaks World">
+    <meta property="og:title" content="VanillaTweaks Tweaks">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:site_name" content="">
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <link href="../../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
+    <link href="../styles/vanillatweaks.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -45,8 +45,8 @@
         <a class="nav-link home" href="home.html">Home</a>
         <a class="nav-link crafting" href="crafting.html">Crafting</a>
         <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
-        <a class="nav-link loot" href="loot.html">Loot</a>
-        <a class="nav-link world active" href="world.html">World</a>
+        <a class="nav-link loot active" href="loot.html">Loot</a>
+        <a class="nav-link world" href="world.html">World</a>
         <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
         <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
     </nav>
@@ -59,18 +59,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing less dangerous nether">
+                                <img src="" alt="Picture representing named mobs dropping nametags">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="less_dangerous_nether">
-                                    <h4>Less dangerous nether</h4>
+                                <a name="mob_nametag">
+                                    <h4>Named mobs drop their nametag when they die</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        Nether is Less Dangerous as there are no Lava Pockets.
+                                        Named mobs will drop their name tags.
                                     </p>
                                 </div>
                             </div>
@@ -82,18 +82,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing realistic predator/prey relationship">
+                                <img src="" alt="Picture representing bats drop leather">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="realistic_relationship">
-                                    <h4>Realistic predator/prey relationships!</h4>
+                                <a name="bat_leather">
+                                    <h4>Named mobs drop their nametag when they die</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        When ocelots kill chickens, the chickens won't drop meat! Same for wolves and sheep!
+                                        Bats drop leather when they die.
                                     </p>
                                 </div>
                             </div>
@@ -105,18 +105,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing automatic seed planting">
+                                <img src="" alt="Picture representing enderman dropping their held block">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="auto_seed_planting">
-                                    <h4>Automatic seed plating</h4>
+                                <a name="enderman_block">
+                                    <h4>Enderman drop their held blocks</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        Seeds will plant themselves after a (randomly-determined) couple of seconds delay. Farms can now be more easily automated!
+                                        Endermen drop their held blocks.
                                     </p>
                                 </div>
                             </div>
@@ -128,18 +128,18 @@
                         <div class="row no-gutters">
                             <div class="image-region col-md-3">
                                 <!-- image -->
-                                <img src="" alt="Picture representing sponges drying in nether">
+                                <img src="" alt="Picture representing creepers dropping TNT">
                             </div>
 
                             <div class="text-region col-md-9 p-4">
                                 <!-- title -->
-                                <a name="sponge_nether_dry">
-                                    <h4>Sponges dry in nether</h4>
+                                <a name="bat_leather">
+                                    <h4>Creepers drop TNT</h4>
                                 </a>
 
                                 <div class="description">
                                     <p>
-                                        Wet sponges when placed dries and becomes a sponge block.
+                                        Creepers have a 1/10 chance of dropping a TNT block.
                                     </p>
                                 </div>
                             </div>
